# resonates-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak_20250901_1212  README.md  Swap-Amp.ps1  claude_vectors_compressed_20250831.jsonc  embed.py  gemi_README.gemi.md  resonates.toml  vectors_20250831.json  xzCodeAnalyzyerCompleter.ps1
_gemi-build-wrapper/: build-completion.sh  build.sh  install.sh
src/: amp_config.rs  amp_main.rs  amp_main_fixed.rsold  amp_similarity.rs  ann.rs  ann_hnsw.rs  api.rs  api_gemi.rs  cluster.rs  config.rs  embedder_fast.rs  filter_pipeline.rs  graph.rs  linkage_gemi.rs  main.gemini.rs  main.rs  main.rs.bak  report_gemi.rs  similarity.rs  splitter_gemi.rs
