[package]
name = "resonates-rs"
version = "1.3.0"
edition = "2021"
description = "Semantic Code Pattern Analysis via Embedding Resonance"
authors = ["AlkineHotel"]
license = "MIT"
repository = "https://github.com/alkenethiol/resonates-rs"
keywords = ["code", "similarity", "embedding", "refactor", "analysis"]
categories = ["development-tools", "text-processing"]

[[bin]]
name = "resonates"
path = "src/main.rs"

[[bin]]
name = "amp-resonates"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
glob = "0.3"
rayon = "^1"
ahash = "0.8"
petgraph = "0.6"
url = "2"
indicatif = "0.17"
toml = "0.8"
dirs = "5"
csv = "1.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

# Tree-sitter and your splitter
tree-sitter-rust = "*"
tree-sitter-javascript = "*"
tree-sitter-typescript = "*"
tree-sitter-python = "*"
tree-sitter-go = "*"
tree-sitter-java = "*"
tree-sitter-c = "*"
tree-sitter-cpp = "*"
tree-sitter-c-sharp = "*"
tree-sitter-bash = "*"
tree-sitter-powershell = "*"
tree-sitter-html = "*"
tree-sitter-css = "*"
tree-sitter-json = "*"
tree-sitter-yaml = "*"
tree-sitter-toml = "*"
tree-sitter-xml = "*"
tree-sitter-sql = "*"
tree-sitter-dockerfile = "*"
tree-sitter-markdown = "*"

# Native embeddings (no Python)
fastembed = "*"

# ANN index
hnsw_rs = "0.3.2"
anndists = "0.1"


# Optional: logging
log = "0.4"
env_logger = "0.11"
tree-sitter-language = "0.1.5"
tree-sitter = "*"
